crates/runtime/tests/models/snapshots/integration_models__models__search__text_search_with_where_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "qs",
      "matches": {
        "answer": [
          "Relative or \"stress\" polycythaemia, which is secondary to a depletion in the plasma volume."
        ]
      },
      "primary_key": {
        "id": 890
      },
      "score": 7.521658420562744
    }
  ]
}
