crates/runtime/tests/models/snapshots/integration_models__models__search__vector_search_explain_basic.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp
---
[
  {
    "plan_type": "logical_plan",
    "plan": "Projection: vector_search().cp_catalog_page_sk, trunc(vector_search().score, Int64(3))\n  Limit: skip=0, fetch=4\n    BytesProcessedNode\n      TableScan: vector_search() projection=[cp_catalog_page_sk, score], fetch=4"
  },
  {
    "plan_type": "physical_plan",
    "plan": "ProjectionExec: expr=[cp_catalog_page_sk@0 as cp_catalog_page_sk, trunc(score@1, 3) as trunc(vector_search().score,Int64(3))]\n  RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1\n    CoalescePartitionsExec: fetch=4\n      BytesProcessedExec\n        SortExec: TopK(fetch=4), expr=[score@1 DESC NULLS LAST], preserve_partitioning=[true]\n          ProjectionExec: expr=[cp_catalog_page_sk@0 as cp_catalog_page_sk, 1 - cosine_distance([0.0338746, 0.118741035, 0.047697797, 0.059313256, 0.019320061, -0.044027425, 0.04161699, -0.019397369, -0.0036118974, -0.037244953, -0.060324173, -0.010578404, 0.02836453, -0.05174924, 0.044544708, 0.028554088, 0.000052816253, 0.069531046, 0.03623081, 0.050416794, -0.050457295, -0.03507837, -0.011237011, -0.03672217, 0.008575028, 0.056698967, -0.02113006, -0.022552595, -0.015206454, -0.007960951, -0.040055823, -0.035543144, 0.07626915, 0.06497858, 0.0017841524, -0.025525432, -0.00980044, 0.0221375, -0.018973641, 0.0031710735, 0.023083463, -0.04052045, 0.049755804, -0.028725222, -0.06039341, -0.04359702, -0.003956066, 0.042683814, 0.09071573, 0.061076622, 0.019938791, -0.029183602, -0.044436894, 0.0013192501, 0.037325982, 0.09271931, -0.008781814, 0.042619497, -0.0024623892, -0.0012780061, 0.06575243, 0.023257812, -0.46192712, -0.018609995, -0.071776845, -0.028737482, 0.041662738, 0.023319976, -0.011817169, -0.05452421, -0.07162088, 0.015478521, -0.096763566, 0.03704654, 0.026810003, -0.033018123, 0.051204905, -0.0393498, 0.028531976, 0.08119197, -0.08255657, -0.06511069, -0.00592583, -0.06396621, -0.001161257, 0.09607808, 0.017944274, 0.042284712, 0.04917987, 0.018948618, -0.03875998, -0.02980314, -0.015568504, -0.019614317, 0.009115449, 0.08512417, -0.021837356, 0.007781477, -0.0022234635, 0.045904513, -0.025471503, -0.014901735, -0.013356432, -0.02962689, 0.029136706, 0.02777394, -0.08069504, 0.053749155, 0.027680157, 0.054473266, -0.014579029, -0.038982127, -0.038126606, -0.003438902, -0.0037987244, 0.014167302, -0.061159045, 0.007998609, -0.025608048, -0.014983292, 0.021105759, -0.004530158, -0.021843823, 0.058169726, 0.0031376476, 0.045928452, -0.027227635, 3.916178e-33, 0.059038028, 0.005661309, 0.033969276, 0.016923279, -0.0012775181, 0.007523917, -0.054384205, -0.056637064, -0.030391231, 0.1223698, -0.00867303, -0.06388533, 0.00300451, 0.02243733, 0.03860526, -0.006014763, -0.050050154, 0.06388576, -0.08961319, 0.03940029, -0.0044986047, 0.13016614, -0.010188322, -0.00057998166, -0.04729713, -0.090258606, -0.007882707, 0.07223578, 0.046355985, 0.0069676153, 0.02460942, -0.08687958, 0.021628525, -0.0052133743, -0.07584217, -0.03841882, 0.015448375, 0.01277502, 0.0074327807, -0.047753293, -0.004628535, 0.02144737, 0.040509228, -0.06752841, 0.02162359, -0.004802513, 0.018923776, -0.052458555, -0.08466724, -0.020311033, 0.016647054, -0.017656898, 0.01941401, 0.029704498, -0.047569223, 0.055293556, 0.035786625, 0.07644776, 0.011449768, -0.045506123, 0.041186336, 0.014350884, 0.08387813, 0.015937135, -0.012220515, -0.07159419, -0.0023860668, 0.027150083, 0.0081203645, -0.053120352, 0.018370371, -0.014058226, -0.052113462, 0.0017128227, -0.068286896, 0.057246443, 0.039027557, -0.066211626, 0.066986, -0.02138682, -0.081327416, -0.0100378245, -0.044962067, 0.02432522, -0.01233514, 0.06687955, 0.013560573, -0.012750704, -0.014551061, 0.028839085, -0.045901228, -0.05063175, -0.14491566, -0.047876485, 0.005079221, -3.042894e-33, -0.057057094, -0.04398191, -0.03653634, 0.049720865, -0.03007366, -0.013366716, 0.030479476, 0.008526896, 0.0159789, 0.006407779, 0.01908096, 0.066157915, -0.0121445665, 0.0073057106, -0.058567695, -0.009795399, 0.030492244, 0.009330388, 0.0014843813, 0.035897415, 0.044472694, -0.022005323, -0.04434908, -0.03975679, -0.04118026, 0.117110886, 0.027795613, 0.03232455, -0.025578791, -0.033522666, 0.09405752, -0.0027748623, -0.025734015, 0.10879335, -0.012797874, 0.06525531, 0.029712658, 0.039782416, -0.008456549, -0.022576733, 0.048129912, -0.06176702, -0.044357542, -0.05243042, 0.024207793, 0.1092692, 0.06913881, 0.017669603, -0.0045993035, 0.020609397, -0.028595341, -0.0031232538, 0.02843749, -0.060324468, -0.06510543, 0.032132138, 0.01858701, -0.031776316, 0.07000604, -0.005170414, 0.0121896025, 0.014842191, -0.049372878, -0.00046723592, -0.021862697, 0.06230347, 0.00538817, -0.07666808, -0.051142685, 0.05674331, 0.0051883617, -0.032217275, -0.033501208, -0.03664634, 0.01586207, 0.0323226, -0.03570888, 0.025456281, -0.017002044, -0.058774944, -0.024327416, -0.032050464, -0.13756327, 0.025247402, 0.023932727, 0.0045240964, 0.0057345303, 0.08895104, -0.031085027, 0.0637495, -0.00607301, 0.09164479, -0.006394751, -0.054410912, -0.028173383, -1.6490176e-8, -0.002079944, -0.13333912, 0.03695366, 0.0062985304, 0.051725328, 0.022476558, 0.089505434, 0.00836989, 0.016911823, -0.067968175, -0.017769553, 0.018254505, 0.01936477, 0.05226737, 0.04106786, 0.11397037, 0.039185833, -0.043211557, -0.040752303, -0.019132465, 0.05277835, -0.004637199, -0.012698054, -0.023800967, -0.017153809, -0.024085829, -0.06734654, 0.113534, 0.03479782, 0.043010995, -0.006064316, 0.027249288, -0.041364197, -0.009559743, 0.014163721, 0.061849665, 0.013629781, 0.0030614692, 0.02432756, 0.03704033, -0.021195434, 0.021976097, -0.06645328, 0.009384635, -0.107441366, -0.022035414, -0.038558897, 0.016030472, -0.07753257, 0.030149661, -0.015237419, 0.018207932, -0.07515177, 0.049880646, -0.037217196, 0.020411987, 0.0037913183, 0.0142599465, 0.022091629, 0.039614964, 0.051777765, 0.040976956, -0.021111844, -0.030537046], CAST(cp_description_embedding@1 AS List(Field { name: \"item\", data_type: Float32, nullable: true, dict_id: 0, dict_is_ordered: false, metadata: {} }))) as score]\n            RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1\n              BytesProcessedExec\n                SchemaCastScanExec\n                  DataSourceExec: partitions=1, partition_sizes=[1]\n"
  }
]
