crates/runtime/tests/models/snapshots/integration_models__models__search__vector_search_sql_basic.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "id": 863,
    "answer": "Choices create costs and benefits.",
    "trunc(vector_search().score,Int64(3))": 0.946
  },
  {
    "id": 1316,
    "answer": "\\(\\boxed{2a + 4b}\\)",
    "trunc(vector_search().score,Int64(3))": 0.922
  },
  {
    "id": 590,
    "answer": "\\(\\boxed{x = A + E}\\)",
    "trunc(vector_search().score,Int64(3))": 0.919
  },
  {
    "id": 6,
    "answer": "<refined solution>  \n\n*(Repeated for each question-answer pair above.)",
    "trunc(vector_search().score,Int64(3))": 0.916
  }
]
