crates/runtime/tests/models/snapshots/integration_models__models__search__vector_search_sql_filters.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "id": 863,
    "answer": "Choices create costs and benefits.",
    "score": 0.94
  },
  {
    "id": 1316,
    "answer": "\\(\\boxed{2a + 4b}\\)",
    "score": 0.919
  },
  {
    "id": 590,
    "answer": "\\(\\boxed{x = A + E}\\)",
    "score": 0.916
  },
  {
    "id": 6,
    "answer": "<refined solution>  \n\n*(Repeated for each question-answer pair above.)",
    "score": 0.909
  }
]
