crates/runtime/tests/models/snapshots/integration_models__models__search__vector_search_sql_filters_metadata.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "id": 863,
    "answer": "Choices create costs and benefits.",
    "score": 0.94
  },
  {
    "id": 6,
    "answer": "<refined solution>  \n\n*(Repeated for each question-answer pair above.)",
    "score": 0.909
  },
  {
    "id": 438,
    "answer": "The Cat does not need to drink, as it obtains sufficient water from its prey.",
    "score": 0.904
  },
  {
    "id": 1001,
    "answer": "$\\boxed{\\text{c. must be confirmed by Western blot.}}$",
    "score": 0.889
  }
]
