crates/runtime/tests/models/snapshots/integration_models__models__search__vector_search_sql_projection.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "id": 863,
    "answer": "Choices create costs and benefits.",
    "reference_answer": "Choices create costs and benefits.",
    "source": "textbook_reasoning",
    "score": 0.946
  },
  {
    "id": 1316,
    "answer": "\\(\\boxed{2a + 4b}\\)",
    "reference_answer": "2a + 4b",
    "source": "textbook_reasoning",
    "score": 0.922
  },
  {
    "id": 590,
    "answer": "\\(\\boxed{x = A + E}\\)",
    "reference_answer": "x = A + E",
    "source": "textbook_reasoning",
    "score": 0.919
  },
  {
    "id": 6,
    "answer": "<refined solution>  \n\n*(Repeated for each question-answer pair above.)",
    "reference_answer": "78.54 cm²\n\nPlease provide the actual question and detailed answer you need me to work with.",
    "source": "textbook_reasoning",
    "score": 0.916
  }
]
